--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
         
         <dependency>
             <groupId>org.springframework.security</groupId>
