--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/db
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
+
+server.port=8080
